# ebookviewer

./: .gitignore  README.md  build.gradle  gradle.properties  init.sh  local.properties
app/: build.gradle
app/cmake/: CMakeLists.txt
app/jni/: Application.mk
app/jni/ebookdroid/: PageCropper.c  bytebufferbitmapbridge.c  djvudroidbridge.cpp  ebookdroidjni.c  javahelpers.c
app/src/main/: AndroidManifest.xml  lint.xml
app/src/main/assets/about/en/: changelog.wiki  common.html  donations.html  thanks.html
app/src/main/java/org/afzkl/colorpicker/drawables/: AlphaPatternDrawable.java
app/src/main/java/org/afzkl/colorpicker/views/: ColorPanelView.java  ColorPickerView.java
app/src/main/java/org/ebookdroid/: CodecType.java  EBookDroidApp.java
app/src/main/java/org/ebookdroid/common/bitmaps/: AbstractBitmapRef.java  BitmapManager.java  BitmapRef.java  ByteBufferBitmap.java  ByteBufferManager.java  ByteBufferTexture.java  GLBitmaps.java
app/src/main/java/org/ebookdroid/common/cache/: CacheManager.java  DocumentCacheFile.java  PageCacheFile.java  ThumbnailFile.java
app/src/main/java/org/ebookdroid/common/keysbinding/: KeyBindingsDialog.java  (+1 more)
app/src/main/java/org/ebookdroid/core/: AbstractEvent.java  AbstractScrollController.java  AbstractViewController.java  DecodeServiceBase.java  DecodeServiceStub.java  EventChildLoaded.java  EventCrop.java  EventGLDraw.java  EventGotoPage.java  EventPool.java  EventReset.java  EventScrollDown.java  EventScrollUp.java  EventZoomIn.java  EventZoomOut.java  HScrollController.java  NavigationHistory.java  Page.java  PagePaint.java  PageTree.java  PageTreeNode.java  SinglePageController.java  VScrollController.java  ViewState.java
app/src/main/java/org/ebookdroid/opds/: BaseEntryBuilder.java  OPDSBookType.java  OPDSClient.java
app/src/main/java/org/emdev/: BaseDroidApp.java
app/src/main/java/org/emdev/ui/: AbstractActionActivity.java  AbstractActivityController.java  ActivityEvents.java
app/src/main/java/org/emdev/utils/: CompareUtils.java  FastMath.java  FileUtils.java  HyphenationUtils.java  LayoutUtils.java  LengthUtils.java  PermissionUtils.java  StringUtils.java  WidgetUtils.java
app/src/main/res/drawable/: browser_icon_epub.xml
app/src/main/res/layout/: about.xml  about_part.xml  alias_url.xml  backup_screen.xml  bookcase_view.xml  bookmark.xml  bookmark_edit.xml  browser.xml  browseritem.xml  color_picker_preference_widget.xml  dialog_color_picker.xml  folder_dialog.xml  gotopage.xml  gotopage_bookmarks.xml  gotopage_pages.xml  keybinding_action.xml  keybinding_group.xml  list_dropdown_item.xml  opds.xml  opds_auth_dlg.xml  opdsitem.xml  outline.xml  outline_item.xml  pref_seek_dialog.xml  recent.xml  recentitem.xml  seach_controls.xml  tap_zones_config.xml  thumbnail.xml  toolbar_actionbar.xml  viewer.xml
app/src/main/res/layout-land/: gotopage.xml
app/src/main/res/layout-sw600dp/: opdsitem.xml
app/src/main/res/layout-v11/: list_item.xml
app/src/main/res/layout-v21/: outline.xml
app/src/main/res/menu-sw600dp-v11/: recentmenu.xml
app/src/main/res/values/: service_colors.xml  service_dimens.xml  strings_common.xml
app/src/main/res/values-eo/: strings_common.xml
app/src/main/res/values-fr/: strings_common.xml
app/src/main/res/values-it/: strings_common.xml
app/src/main/res/values-iw/: strings_common.xml
app/src/main/res/values-ja/: strings_common.xml
app/src/main/res/values-nl/: strings_common.xml
app/src/main/res/values-pl/: strings_common.xml
app/src/main/res/values-ru/: strings_common.xml
app/src/main/res/values-uk/: strings_common.xml
app/src/main/res/values-zh/: strings_common.xml
art/drawables/: update-resources.sh
gradle/wrapper/: gradle-wrapper.properties
(+215 files in other folders)
